# ChangeLog for app-emacs/org-mode
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/org-mode/ChangeLog,v 1.162 2014/01/20 15:51:15 ago Exp $

  20 Jan 2014; Agostino Sarubbo <ago@gentoo.org> org-mode-8.2.1.ebuild:
  Stable for ppc, wrt bug #495334

  15 Jan 2014; Chema Alonso <nimiux@gentoo.org> org-mode-8.2.1.ebuild:
  Stable for amd64 wrt bug #495334

*org-mode-8.2.1 (02 Nov 2013)

  02 Nov 2013; Ulrich Müller <ulm@gentoo.org> +org-mode-8.2.1.ebuild:
  Version bump.

*org-mode-8.2 (23 Sep 2013)

  23 Sep 2013; Ulrich Müller <ulm@gentoo.org> +org-mode-8.2.ebuild:
  Version bump.

  06 May 2013; Ulrich Müller <ulm@gentoo.org> org-mode-7.9.2.ebuild,
  org-mode-8.0.2.ebuild:
  Also define infodir, bug 468574.

  05 May 2013; Ulrich Müller <ulm@gentoo.org> org-mode-7.9.2.ebuild,
  org-mode-8.0.2.ebuild:
  Fix previous commit, EPREFIX was missing from paths, bug 468574.

*org-mode-8.0.2 (02 May 2013)

  02 May 2013; Ulrich Müller <ulm@gentoo.org> +org-mode-8.0.2.ebuild,
  +files/50org-mode-gentoo-8.el:
  Version bump, bug 466720. Thanks to Christoph Lange <langec@web.de>.

  02 May 2013; Ulrich Müller <ulm@gentoo.org> org-mode-7.9.2.ebuild,
  -files/org-mode-7.8.03-Makefile.patch, -files/50org-mode-gentoo-7.8.03.el:
  Fix install location, "org-mode" instead of "org". Remove stale files.

  09 Dec 2012; Ulrich Müller <ulm@gentoo.org> org-mode-7.9.2.ebuild:
  Fix sed options.

  22 Nov 2012; Christian Faulhammer <fauli@gentoo.org> -org-mode-7.7.ebuild,
  -org-mode-7.8.11.ebuild:
  clean up

  22 Nov 2012; Ulrich Müller <ulm@gentoo.org> -org-mode-7.9.1.ebuild,
  org-mode-7.9.2.ebuild:
  Add RESTRICT="test": The "testing" subdirectory needed for tests is only
  present in the upstream git repository, but not distributed with the
  package's tarball, bug 441072 comment #4. Remove old.

  21 Nov 2012; Agostino Sarubbo <ago@gentoo.org> org-mode-7.9.2.ebuild: