@@ -3,32 +3,27 @@ Hash: SHA256
 
 AUX 50org-mode-gentoo-8.el 95 SHA256 0f5ef92d56f86b533daad54db85bad93899d08c4b0319a5949cdfbffedd6f354 SHA512 aa2e47c060d441ef1f631f2a44f3b7adc7cf5306155b9cc3f3f808aa053b411980671a89933c77fe02aac79bb6f25f2fe98c676e13e097dd885f23bc9d8cb000 WHIRLPOOL 69ac6f0fd66f3920bb9df820767915a5080ec5b76be0a4b3b50454b3e9a01e642cc91b603d31b6236e3d89face451caae93de3446e68512c7c853a5c0f9dfd76
 AUX 50org-mode-gentoo.el 118 SHA256 6a01ea37515cf87a7d7b6e3085d9867e57b11664a8b3099eecd8c13a0269ecec SHA512 85d3533b5f8f7ee3f6ceb083b94b31e4c90279418de05b471ee5efb20c921b6d52197ff6ca8c30e5b094de064555f9a2603851fa7c86b0e36cb20b99aeb96140 WHIRLPOOL fd6a875f2f07857bb05ff7be22471bd544d372062b831121482b90de251f365b46eb4b6fe8208fdd06ad3fff967562a2a5a078f5dd7d6e7c3a4296dbe09b609f
-DIST org-6.36c.tar.gz 2706358 SHA256 26db6b9c319a2dd54f3a8da78f761594b7c8e7edeb9106f14a1c3a6ff94786a0 SHA512 81dfd13f4a3540bf8e6c3cd9a49f02882bb1aa20ac4ecc97beaa159bd8ab7ca4bf10bf5ca23c40619788f8999cee8ae6b0439d1d51b561197c24e6efd34f5d56 WHIRLPOOL 9c89b8508338553a05458bd9c532aaf951dd8803a755f432bd3136629e17e2244c06377b5516cee5cb04a69edd9301cdeafac70da1f3e83715d41643bf65dd2b
 DIST org-7.9.2.tar.gz 4141885 SHA256 14c91bf456c271ac17f2f083f86227d4e5f09483fdb69adbf314de4392e25469 SHA512 9b0f90ec47660dcc9faf7ad742b62c816a031119a2a89864f6fd183e343bd08027f5cf8439314b1593b9f5d76ff08f57b0b30aa188e1a94a426b3573c33c434c WHIRLPOOL 3ac9a49157375cd3628c4fb1248af071d8ed725307effbcce81961bd1d35117ae7f5a371baffa6159e0c57fd4f896cdf4a7b0d3ac67942ea177d8717a19ce47f
 DIST org-8.0.2.tar.gz 4171893 SHA256 e129bdb654c7e1cf7404cc55e65ff479712b1d9549ecdbb4f3904b4bff8c7034 SHA512 d1de4ac6a86449446e438a0f2edc98672144ab25721d4eb482ff1bc60122fded9775274d0ca7085d7ed6e98d972734bbd041970f65d8ed73db99f388dc41b2db WHIRLPOOL c51da4cd3b5697585d1f0ee08f8d782240d63395316ccc0570deefaec6944c384bb16963e3bfd3e495bbb8d5c003bfc7d388aa29d487d16da6a6eadb83858033
 DIST org-8.2.1.tar.gz 4215666 SHA256 625e2b6786158bcf6c43194075f7638ab8048c68a60025289a051c407e467823 SHA512 366504c8bc4637c96d6255603e949951fed1d89b9b58aa938072c982cca14d5eedfa2a45aabbae55d4862aa9dcc984b379f969cf5b6da50f73d2e0044cd687fb WHIRLPOOL 024166ee4eb6bb994f44249ea819ac3b4aad9c133bfcbc438d57a4dce54b3c8a108519eabf9318e769768be36d1733066bbec58cfaf03fc600de72fd55e3c29d
-DIST org-8.2.tar.gz 4216548 SHA256 88819e5bc15dd342523cbf26e4e9967bb67f6f206d96b609d9bf08d0730d1286 SHA512 4ef195d7cae62efb7f6c24dcf03395db147579c5d22a0403ac09c0bafbdccf2d5d9c0e5ae8e3500ba93d9610be202190468ff2e248fec1bd3ab3f3adca9a79a9 WHIRLPOOL 5fc724800828ace482c4dd064fc5cbb23e179dbc227af451f8d3fdf74ea21d544121bbe623fae7d75859b17f3b8a939598273d1cacc54d72cc2317103e78f4a9
-EBUILD org-mode-6.36c.ebuild 1055 SHA256 69bb31775b40b494f84ed61c57583c9f9567e7cdb04723165205f95bb7cde283 SHA512 47fdc5c198409e9ad82b4f77b6edb6f98fab93fc8441c263912a38ac8d4db5a8ab9d3b0b7a6d61f394e6c16ee3e25f07d19bfc81b7be01d0bfb3a09bc7db7fec WHIRLPOOL da243297d2d87efc1e5f3241c9fd8f60e84d65f3e3169ff32d259c3170f4f4454f87739f2959af1b1cb74cf146b17ada25e088c37998dbed786f313c74918e0e
+DIST org-8.2.5h.tar.gz 4220242 SHA256 f0f4924c9d57557b12f535c032f5f8584cc27ab6af2afc9939f9acf1af2c5d80 SHA512 e486a6f831de935fbe9cbcff18042a5a5ff9ecb60ffd755455c70488f95c6c103f7870d7d69f9808043b2b87fe64441adfd5c9ddb417b33fd8f9469d1943db49 WHIRLPOOL 72290244aaabd09660fd290a100d8ae2ed05b64d3b842464f247c20c634a75e2738c07e85d414b852685f2fade0b2aea92a1a2835d178d90b7eab5650710066b
 EBUILD org-mode-7.9.2.ebuild 1727 SHA256 0421e7a6a65e3029ab6baab9566b148d3f04529c872729c126b3aeb36a1f8d45 SHA512 9f4301e8e653dee61cd0f823bab74814e85512ea04b305b1dc40d3ff3ba38298c69bdc744b60cff9ab12affbb7f55e05d09286b4ec1b6ec91eb73fbc52c4dd7d WHIRLPOOL cf8da853b0226577716c2be3c69478bba85fea9d8936d846c8e4b6b682b1e40ad86aa368889d52a69edfbefa6ff61a6d0d605fe90fb1bc2794e1c4037724df28
 EBUILD org-mode-8.0.2.ebuild 1610 SHA256 d65c60e19011676bd49a4ebccc017ef59b4bfced44688bd607e31eb121800137 SHA512 48975e44c1803f33af43ab809e2137ed6c73e84c73cdb34d6e989dc6af7edb2497d311302f8de3af93eaf0f3fd4b0319783862c7b8533ac5b3208d82ab39b76c WHIRLPOOL fe56bf52cfc9298ba7df334271e35eff0fec9db8736bce18ab78689658f0452e5f0f633aee0471efa6f1222b52c6aa9f4e8301c65f3bea1642017000843caec8
 EBUILD org-mode-8.2.1.ebuild 1608 SHA256 327c91106f2b3e0b7e04e7384c5e896e7b03871382247325386868303383cdb4 SHA512 cb65fd6ba6e2897beb963ad5d7f23bb04dc0473469924ec6fd8bcf3cf8584b5d2fac061dec46b9de16a82dd5c8a6293e184ba75019bfd0ee2c1324bd26a17757 WHIRLPOOL 0730d7094860a5044938b15de4ae1a9e85446f8f64d180beb0578c748c27944184482b4bfd2cf7c8c5817746bb51d4650a833e27a95805b3b4a1121aa8450759
-EBUILD org-mode-8.2.ebuild 1608 SHA256 c59b08c459dc6a5baf1552e0cfb88776d25cd5fabe626e21ae00940579fae86b SHA512 e875f9bbb7165a54f21b41b521acb565e636687623ef4963e798a6c74b32444f8aba4ce3ea18425f9f8f1df2d56d0a64488474edc8f59ff1e31c5986c8b2eeda WHIRLPOOL 8868263478cb4effba3fdd5a4bb7087514c9f7fa700e1812970b2c52ef75d10721378ba95336bd0599c25a8a13b6cf85930447e72612b061ec523e1a0c3347ca
-MISC ChangeLog 23635 SHA256 ef96429d0db795728811f829998f8a872a36b55c15c78773e5cf0f3cba3c3997 SHA512 2639728a96c71f6a3b700400ee26f2e258d6f8cec7a6e0c24cac0280a15ca84c1f346633ca3bce37dfdd77a5a7991553175d8c03ee330cf0899b340798f94277 WHIRLPOOL 31c00de6e73df9c3f1f87dc9a8d2d48c4a653db21e768c2e182d11f8fef904ca5bfa6ac989c6e26f4278512926ff90ae4bf2425e9f56ba0f62ab87a95a04fb82
+EBUILD org-mode-8.2.5h.ebuild 1611 SHA256 a648998d82d2db3cfc6bb645a5bdec758046f89b014dfa472f7c506fd75131f9 SHA512 0a50dbc67d18fd9a78d4bd0fe18c03e6b4e472a94ed957450feffa86eb5a0a0cff0e3a51032a1695d3be5b187633c554b9e0997333a466c5ece7b3fd793e0a39 WHIRLPOOL 5b3456d396bf7d08d7ec5e792fcf0dd380c73d081a68517f2a42a5bc737d143e999d913d898ebd47215e9b168a2c60098e394c5da7d0d40554790d66e5854885
+MISC ChangeLog 23816 SHA256 84bc68d9be3f0b1ce8d4ad895dcec1535102a4e4c78a59baa2ebf0b8da469ea9 SHA512 7203c75713f754314f7890d0cbc75073230f39b279c91852335ce082fc73d164053e28867d8c1c7fd550e3a8e9fc972f5a21ea79695ba582a2ac54313078dc56 WHIRLPOOL 6939e75091c80d9e265be881bd9e6c2bf5dc9a262c66a437801b4848f8c4f3cd7164f4faeba457d7a09fbd6c9cf4a16b3789641c373a875e118cdda9ae161748
 MISC metadata.xml 1244 SHA256 11da2d6f729e004b19eafd7ccd15fc3b50a41656ab0ebdfb825dee300f569bbf SHA512 8ca51e3e3b8aa4a982fefcaea22b0d19d5c60a35227f97acf097b998ec64ad0a2cb7deaddbdc0004c37eaffe7574dd9fde8fe03f21abdffe1599d1c69cc50aff WHIRLPOOL 993654e26f11dc38cc284008364b71d10a46ae42ebb4f308a6a64e6cdfd22dbb44f597d199fabf6c8303ef21c6529c50652274e939358da1131c19f198a470d8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJS3UX0AAoJELp701BxlEWffaUP/1K6KEOQrK2VxVlurstrm/bS
-jhyhphDQW+wD2I9+SL6EKmNYwoYDUngB8V07x34xh/9kmJcBOAAEzClFZJUgUdDH
-7a+AuhgI5dXkwdh+MihUnUo5ZwidWC6tjixeN+lJkB1C+XPMQ4Zds8evGgq9t/o7
-Ay4Z7dD2NDlaYLxRQiCxigtd3c8vApdU27gIFiwje1kKe6rQUncZn7IrQso8iZPM
-BQrUER84vfeRpYYNrSD3a3bnaaW9Elx8ua3Ln3q765Gzr3YbMiM5Qk1F+QNvgpsK
-04A4RTSRyzM+fJPh5dfodZ1Hl4K695Gi4JuTOj9om+02Z7g2spJaKZeVgoQ3M6HB
-ZPfLUP+Sqenr4G5Z525QpUQwWpR+920eyviB3EPbvUVvNO2UuVMVWDlfNeWxyi8A
-BafULGqYif8NNxQQLZPXvecstodO/CNK137Ty7qZtECrqzTOnkyeMr6fbSw1/FDG
-vG9dP+rgVO19QxBSOZ8LeHIpB5REle35IBBckO0IDtFI1C1iG0iS9oU0bKWeFhgV
-eMQZREhSyCtQt3TdNI9ZmlxPfJa7sFibcs6XXs15K2Oeo+rrYOAH/PyaWebsRk6o
-GzX32/1jZAUZp/YW/4pZP/GsGZy7ctFUbdxqFVW9YJZu+v4B6Pgd7Tj2cWUOtD4k
-GZ9mfZ9HiawDitS99Nzd
-=Pef8
+iQGcBAEBCAAGBQJS+zW0AAoJEJQzkH1pP7W4Y5kMAKXgZPygDVFMV0lsyIBrtE9Z
+E0AEI8bUUCPHl8adJV2lrMj7PCPs+uTq4fEn6kKLSTMe8KAs0LT0OCyjiP2iPO0A
+FpRQDrn0VyVqEHmOuOb+yRE6evkO7+EhZdqfuHbmHif5ittpMXpHGUadVBzUH1Q4
+LeeOLCoBk50AttvLz+2kfnJp0hnrRJW1eRJr6enawqazeLY6/2OeV6NGXMpF8X6m
+PGwMUUNBxba1L/V3QQfWHy5aCd25A5iepl76Wpda4lDAV/L9lK95nuzxzXBC3nct
+/zildA5ySx7DEQqO4E7ntx05dlnoz3F/pUIJnE3O1PmU91dlkfqK7uhPvWf9PmFA
+N/CIqpoyedIM2rEb4HFd9gcRxzf/vPGYd728j2e8ctK9Qm6TSKxnx8pDJ7+o2cNw
+PiDG8OD6wSp0y9msfSwvpDdmQjVPogMccuIrbG8AEKQJDPvXt4P0UyhzUekm+vRJ
+ud47jmeF4cG+5MzSFnkH9Zsit9ns0owf7F1f3pwvkA==
+=e3FU
 -----END PGP SIGNATURE-----
