@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/org-mode/org-mode-8.2.ebuild,v 1.1 2013/09/23 17:53:53 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/org-mode/org-mode-8.2.5h.ebuild,v 1.1 2014/02/12 08:44:27 ulm Exp $
 
 EAPI=5
 NEED_EMACS=23
